data/derived/comb/progs/unify/prog8653.ml.out
Characters 208-228:
  else ((carry+1),(carry+1)::((carry+b+c) mod 10))
                             ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
